# a2ui

./: README.md  hooks.py  pyproject.toml
agent_sdks/python/a2ui_agent/: README.md  pack_specs_hook.py  pyproject.toml
agent_sdks/python/a2ui_agent/src/a2ui/: inference_strategy.py
agent_sdks/python/a2ui_agent/src/a2ui/a2a/: extension.py  parts.py
agent_sdks/python/a2ui_agent/src/a2ui/adk/: send_a2ui_to_client_toolset.py
agent_sdks/python/a2ui_agent/src/a2ui/adk/a2a/: event_converter.py  part_converter.py
agent_sdks/python/a2ui_agent/src/a2ui/adk/orchestration/: __init__.py  a2ui_subagent_map.py
agent_sdks/python/a2ui_agent/src/a2ui/basic_catalog/: provider.py
agent_sdks/python/a2ui_agent/src/a2ui/experimental/express/: __init__.py  compiler.py  constants.py  decompiler.py  parser.py  prompt_generator.py  schema_helper.py  visitor.py
agent_sdks/python/a2ui_agent/src/a2ui/parser/: parser.py  payload_fixer.py  response_part.py  streaming.py  streaming_v08.py  streaming_v09.py
agent_sdks/python/a2ui_agent/src/a2ui/schema/: catalog.py  catalog_provider.py  common_modifiers.py  constants.py  manager.py  utils.py  validator.py  validator_v08.py
agent_sdks/python/a2ui_agent/src/a2ui/template/: manager.py
agent_sdks/python/a2ui_agent/tests/adk/: test_send_a2ui_to_client_toolset.py
agent_sdks/python/a2ui_agent/tests/adk/a2a/: test_event_converter.py  test_part_converter.py
agent_sdks/python/a2ui_agent/tests/adk/orchestration/: test_a2ui_subagent_map.py
agent_sdks/python/a2ui_agent/tests/conformance/: test_a2a_integration.py  test_adk_extensions.py  test_conformance.py
agent_sdks/python/a2ui_agent/tests/express/: test_cli_tools.py  test_compiler.py  test_decompiler.py  test_integration.py
agent_sdks/python/a2ui_agent/tests/integration/: verify_load_real.py
agent_sdks/python/a2ui_agent/tests/parser/: test_streaming_v08.py  test_streaming_v09.py
agent_sdks/python/a2ui_agent/tests/schema/: test_catalog.py  test_schema_manager.py  test_validator.py
agent_sdks/python/a2ui_core/: pyproject.toml
agent_sdks/python/a2ui_core/scripts/: generate_schemas.py
agent_sdks/python/a2ui_core/src/a2ui/core/: exceptions.py
agent_sdks/python/a2ui_core/src/a2ui/core/basic_catalog/: components.py  expression_parser.py  function_apis.py  styles.py
agent_sdks/python/a2ui_core/src/a2ui/core/processing/: message_processor.py
agent_sdks/python/a2ui_core/src/a2ui/core/rendering/: data_context.py
agent_sdks/python/a2ui_core/src/a2ui/core/schema/: client_capabilities.py  client_to_server.py  common_types.py  server_to_client.py
agent_sdks/python/a2ui_core/src/a2ui/core/state/: component_node.py  surface_model.py
agent_sdks/python/a2ui_core/src/a2ui/core/validating/: catalog_schema_validator.py  integrity_checker.py  (+1 more)
agent_sdks/python/a2ui_core/tests/: test_catalog.py  test_generate_schemas.py  test_processing.py  test_rendering.py  test_validating.py
(+162 files in other folders)
