# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "a2ui-agent-sdk"
dynamic = ["version"]
description = "A2UI Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "a2a-sdk>=0.3.0,<0.4.0",
  "a2ui-core>=0.1.0",
  "antlr4-python3-runtime>=4.13.0,<4.14.0",
  "google-adk>=1.28.1",
  "google-genai>=1.27.0",
  "jsonschema>=4.0.0"
]

[project.scripts]
pyink = "pyink:patched_main"

[tool.uv.sources]
a2ui-core = { workspace = true }

[build-system]
requires = [
  "hatchling",
  "jsonschema",
  "pyink>=24.10.0",
  "antlr4-tools>=0.2.1",
  "antlr4-python3-runtime>=4.13.0,<4.14.0"
]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/a2ui/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/a2ui"]
artifacts = ["src/a2ui/assets/**"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/a2ui/assets/**"]

[tool.hatch.build.hooks.custom]
path = "pack_specs_hook.py"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
[dependency-groups]
dev = [
    "antlr4-tools>=0.2.1",
    "hatchling>=1.30.1",
]
