# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "a2ui-core"
dynamic = ["version"]
description = "A2UI Python SDK - Core Library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.26.0",
    "pydantic>=2.10.0",
    "referencing>=0.37.0",
]

[dependency-groups]
dev = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/a2ui/core/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/a2ui"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

